--- a/toolchain/adapter/BUILD.bazel
+++ b/toolchain/adapter/BUILD.bazel
@@ -1,6 +1,6 @@
 exports_files(["BUILD.bazel"])
 
-load("//toolchain/adapter:BUILD.bzl", "toolchain_adapter")
+load("//toolchain/adapter:ocaml_tc_adapter.bzl", "toolchain_adapter")
 load("//toolchain/adapter:DEV_TOOLCHAIN.bzl", "dev_toolchain_adapter")
 load("//toolchain/adapter:mustache_tc_adapter.bzl", "mustache_toolchain_adapter")
 load("//toolchain/adapter:boot_tc_adapter.bzl", "boot_toolchain_adapter")
