--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -3,7 +3,8 @@ label_setting(name="compiler",
               visibility = ["//visibility:public"])
 
 label_setting(name="lexer",
-              build_setting_default = "//lex:ocamllex.byte",
+              build_setting_default = "//boot:ocamllex.boot",
+              # build_setting_default = "//lex:ocamllex",
               visibility = ["//visibility:public"])
 
 label_setting(name="ocamlrun",
