--- a/asmcomp/BUILD.bazel
+++ b/asmcomp/BUILD.bazel
@@ -797,7 +797,7 @@ build_tool(
     # opts = [
     #     "-verbose"
     # ],
-    visibility = ["//asmcomp:__subpackages__"]
+    visibility = ["//boot:__pkg__", "//asmcomp:__subpackages__"]
 )
 
 build_module(
@@ -809,7 +809,6 @@ build_module(
         "//stdlib:Stdlib.Lexing",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Sys",
-        "//bytecomp:Bytesections",
         "//stdlib:Stdlib.Array",
     ],
 )
