--- a/bin/BUILD.bazel
+++ b/bin/BUILD.bazel
@@ -7,6 +7,26 @@ load("//bzl:rules.bzl",
 ## FIXME: support flambda
 ocaml_compiler_r(
     name = "ocamlcc",
+    stdlib   = "//stdlib",
+    prologue = ["//compilerlibs:ocamlcommon",
+                ] + select({
+        # "//config/target:baseline_vm?": ["//bytecomp:ocamlbytecomp"],
+        # "//config/target:baseline_sys?": ["//asmcomp:ocamloptcomp"],
+        # "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
+
+        "//config/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
+
+        "//conditions:default": ["//bytecomp:ocamlbytecomp"]
+    }),
+    main = select({
+        # "//config/target:baseline_vm?": "//driver:Main",
+        # "//config/target:baseline_sys?": "//driver:Optmain",
+        # "//config/target:ult_sys?": "//driver:Optmain",
+
+        "//config/target/emitter:sys_emitter?": "//driver:Optmain",
+
+        "//conditions:default": "//driver:Main"
+    }),
     opts = [ ] + select({
         # ocamlc.byte: ["-compat-32"]
         "//conditions:default": []
@@ -51,33 +71,38 @@ ocaml_compiler_r(
             # "-Wl,--verbose"
             ##FIXME: depends on linker used (bfd, gold, etc.)
         ]
-    }),
-    prologue = ["//compilerlibs:ocamlcommon",
-                ] + select({
-        # "//config/target:baseline_vm?": ["//bytecomp:ocamlbytecomp"],
-        # "//config/target:baseline_sys?": ["//asmcomp:ocamloptcomp"],
-        # "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
-
-        "//config/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
-
-        "//conditions:default": ["//bytecomp:ocamlbytecomp"]
-    }),
-    main = select({
-        # "//config/target:baseline_vm?": "//driver:Main",
-        # "//config/target:baseline_sys?": "//driver:Optmain",
-        # "//config/target:ult_sys?": "//driver:Optmain",
-
-        "//config/target/emitter:sys_emitter?": "//driver:Optmain",
-
-        "//conditions:default": "//driver:Main"
     }),
     # cc_deps = ["//runtime:asmrun"],
     visibility             = ["//visibility:public"]
 )
 
 ################################################################
+## macro, expands to:
+## ocamlc_byte, ocamlopt_byte
+## ocamlopt_opt, ocamlc_opt
+
 ocaml_compilers(
     name = "compilers",
+    stdlib   = "//stdlib",
+    prologue = ["//compilerlibs:ocamlcommon",
+                ] + select({
+        # "//config/target:baseline_vm?": ["//bytecomp:ocamlbytecomp"],
+        # "//config/target:baseline_sys?": ["//asmcomp:ocamloptcomp"],
+        # "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
+
+        "//config/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
+
+        "//conditions:default": ["//bytecomp:ocamlbytecomp"]
+    }),
+    main = select({
+        # "//config/target:baseline_vm?": "//driver:Main",
+        # "//config/target:baseline_sys?": "//driver:Optmain",
+        # "//config/target:ult_sys?": "//driver:Optmain",
+
+        "//config/target/emitter:sys_emitter?": "//driver:Optmain",
+
+        "//conditions:default": "//driver:Main"
+    }),
     opts = [ ] + select({
         # ocamlc.byte: ["-compat-32"]
         "//conditions:default": []
@@ -122,25 +147,6 @@ ocaml_compilers(
             # "-Wl,--verbose"
             ##FIXME: depends on linker used (bfd, gold, etc.)
         ]
-    }),
-    prologue = ["//compilerlibs:ocamlcommon",
-                ] + select({
-        # "//config/target:baseline_vm?": ["//bytecomp:ocamlbytecomp"],
-        # "//config/target:baseline_sys?": ["//asmcomp:ocamloptcomp"],
-        # "//config/target:ult_sys?": ["//asmcomp:ocamloptcomp"],
-
-        "//config/target/emitter:sys_emitter?": ["//asmcomp:ocamloptcomp"],
-
-        "//conditions:default": ["//bytecomp:ocamlbytecomp"]
-    }),
-    main = select({
-        # "//config/target:baseline_vm?": "//driver:Main",
-        # "//config/target:baseline_sys?": "//driver:Optmain",
-        # "//config/target:ult_sys?": "//driver:Optmain",
-
-        "//config/target/emitter:sys_emitter?": "//driver:Optmain",
-
-        "//conditions:default": "//driver:Main"
     }),
     # cc_deps = ["//runtime:asmrun"],
     visibility             = ["//visibility:public"]
