--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -12,7 +12,7 @@ label_setting(name="ocamlrun",
               visibility = ["//visibility:public"])
 
 label_setting(name="runtime",
-              build_setting_default = "//runtime:camlrun",
+              build_setting_default = "//runtime:asmrun",
               visibility = ["//visibility:public"])
 
 label_setting(name="cvt_emit",
