build protocols refactoring, fixes
* //boot:<compiler> targets build directly from boot/ocamlc (no bootstrapping)
* added sh_binary targets //boot:ocamlc.byte.sh,
//boot:ocamlopt.byte.sh to run the vm compilers directly
* //boot:bootstrap does recursive build to get to fixe pt, then
installs in .baseline
* //bin:<compiler> targets build recursively, to fixed point
* test targets use the //boot:<compiler> targets in test mode, which
means they use the .baseline builds

--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -49,7 +49,8 @@ register_toolchains(
     "//toolchain/selector/local:dev",
 
     "//toolchain/selector/local:mustache",
-    "//toolchain/selector/local:preproc",
+
+    # "//toolchain/selector/local:preproc",
 
     "//toolchain/selector/local:boot",
     "//toolchain/selector/local:baseline",
